--- a/asset/index.css
+++ b/asset/index.css
@@ -1,64 +1,1 @@
-.oxmod-business-card {
-  /* CSS */
-  padding: 10px 20px;
-  text-align: left;
-  color: #333;
-}
-.oxmod-business-card .avatar {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  margin-left: -120px;
-  margin-top: 5px;
-  float: left;
-  box-shadow: 0px 0px 5px #444;
-}
-.oxmod-business-card .title {
-  padding-left: 130px;
-  min-height: 120px;
-  overflow: hidden;
-  margin-bottom: 20px;
-}
-.oxmod-business-card .name {
-  font-size: 30px;
-  font-weight: 400;
-  letter-spacing: 5px;
-  line-height: 2;
-}
-.oxmod-business-card .position {
-  font-size: 20px;
-  color: #666;
-}
-.oxmod-business-card .section {
-  color: #666;
-}
-.oxmod-business-card .company {
-  overflow: hidden;
-  padding-left: 80px;
-  margin-top: 30px;
-  border-top: dashed 1px #ececec;
-  padding-top: 10px;
-  color: #999;
-  font-size: 14px;
-}
-.oxmod-business-card .logo {
-  width: 60px;
-  height: 60px;
-  float: left;
-  margin-left: -80px;
-}
-.oxmod-business-card .contact {
-  color: #999;
-  line-height: 1.5;
-  font-size: 16px;
-  padding-left: 20px;
-}
-.oxmod-business-card .contact label {
-  color: #999;
-  padding-right: 10px;
-}
-.oxmod-business-card .introduce {
-  padding: 20px;
-  color: #777;
-  font-size: 17px;
-}
+.oxmod-business-card{padding:10px 20px;text-align:left;color:#333}.oxmod-business-card .avatar{width:100px;height:100px;border-radius:50%;margin-left:-120px;margin-top:5px;float:left;box-shadow:0 0 5px #444}.oxmod-business-card .title{padding-left:130px;min-height:120px;overflow:hidden;margin-bottom:20px}.oxmod-business-card .name{font-size:30px;font-weight:400;letter-spacing:5px;line-height:2}.oxmod-business-card .position{font-size:20px;color:#666}.oxmod-business-card .section{color:#666}.oxmod-business-card .company{overflow:hidden;padding-left:80px;margin-top:30px;border-top:dashed 1px #ececec;padding-top:10px;color:#999;font-size:12px;line-height:1.5}.oxmod-business-card .logo{width:60px;height:60px;float:left;margin-left:-80px;background-position:center center;background-repeat:no-repeat;-webkit-background-size:contain;background-size:contain}.oxmod-business-card .contact{color:#999;line-height:2;font-size:16px;padding-left:20px}.oxmod-business-card .contact label{color:#999;padding-right:10px;font-size:12px}.oxmod-business-card .introduce{padding:20px;color:#999;font-size:14px}
