--- a/asset/index.less
+++ b/asset/index.less
@@ -38,27 +38,34 @@
     border-top:dashed 1px #ececec;
     padding-top:10px;
     color:#999;
-    font-size:14px;
+    font-size:12px;
+    line-height: 1.5;
   }
   .logo{
     width:60px;
     height:60px;
     float:left;
     margin-left:-80px;
+    background-position: center center;
+    background-repeat:no-repeat;
+    -webkit-background-size: contain;
+    background-size: contain;
+
   }
   .contact{
     color:#999;
-    line-height: 1.5;
+    line-height: 2;
     font-size:16px;
     padding-left:20px;
     label{
       color:#999;
       padding-right:10px;
+      font-size: 12px;
     }
   }
   .introduce{
     padding:20px;
-    color:#777;
-    font-size:17px;
+    color:#999;
+    font-size:14px;
   }
  }
